# eusha_cicd

./: .gitignore  Dockerfile  README.md  build-deploy.yml:Zone.Identifier  main.py  pyproject.toml
.github/workflows/: build-deploy.yml
schemas/: pyproject.toml
src/ambikha_cicd/: app.py
terraform/: main.tf  outputs.tf  variables.tf
