[project]
name = "schemas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy Miles", email = "andy@proquickly.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
schemas = "schemas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
